[gd_scene load_steps=8 format=3 uid="uid://bv4lpida023v5"]

[ext_resource type="Script" path="res://scripts/bloco_caindo.gd" id="1_2r82r"]
[ext_resource type="Texture2D" uid="uid://chdedqatyxeyu" path="res://assets/sprites/world_tileset.png" id="2_41sod"]

[sub_resource type="Animation" id="Animation_m6jj2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_80uel"]
resource_name = "cair"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 0), Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(0, 0), Vector2(-1, 0), Vector2(0, 0), Vector2(1, 0), Vector2(0, 0), Vector2(-1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6psnb"]
_data = {
"RESET": SubResource("Animation_m6jj2"),
"cair": SubResource("Animation_80uel")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t3mgq"]
size = Vector2(15, 14.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nirbm"]
size = Vector2(15, 3)

[node name="AnimatableBody2D" type="AnimatableBody2D"]
collision_mask = 2
script = ExtResource("1_2r82r")

[node name="AnimacoesBloco" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6psnb")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_41sod")
region_enabled = true
region_rect = Rect2(127.889, 0, 16.6211, 16.6831)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_t3mgq")

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_nirbm")
debug_color = Color(0.959811, 0, 0.51955, 0.42)

[node name="TempoRespawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="animation_finished" from="AnimacoesBloco" to="." method="_on_animacoes_bloco_animation_finished"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="TempoRespawn" to="." method="_on_tempo_respawn_timeout"]
